# convolution

./: .gitignore  .gitmodules  Cargo.toml  job.sh  run.sh
src/: algorithm.rs  main.rs  simulation.rs
