[package]
name = "convolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4.4"
rand = "0.8.5"
rayon = "1.8"
stack_alg_sim = { path = "dace/stack_alg_sim" }
hist = { path = "dace/hist" }

[[bin]]
name = "convolution"
path = "src/main.rs"
